# autonomous-web-researcher

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: __main__.py
core/: config.py  constants.py  exceptions.py  logging.py
domain/: models.py
providers/: base.py  llm.py  search.py
services/: orchestrator.py  scraper.py  synthesizer.py
tests/: conftest.py  test_orchestrator.py  test_providers.py  test_scraper.py  test_synthesizer.py
